--- a/conf/config_test.yaml
+++ b/conf/config_test.yaml
@@ -1,7 +1,7 @@
-runmode: test                 # 开发模式, debug, release, test 部署时环境变量覆盖
-addr: :8080                  # HTTP绑定端口
+runmode: debug                 # 开发模式, debug, release, test 部署时环境变量覆盖
+addr: :8083                  # HTTP绑定端口
 name: apiserver              # API Server的名字
-url: http://127.0.0.1:8080   # pingServer函数请求的API服务器的ip:port
+url: http://127.0.0.1:8083   # pingServer函数请求的API服务器的ip:port
 max_ping_count: 10           # pingServer函数try的次数
 jwt_secret: Rtg8BPKNEf2mB4mgvKONGPZZQSaJWNLijxR42qRgq0iBb5
 log:
@@ -15,6 +15,6 @@ log:
   log_backup_count: 7
 db:  # DB 配置 部署时环境变量覆盖
   name: db_apiserver
-  addr: 127.0.0.1:3306
+  addr: 0.0.0.0:3306
   username: root
-  password: root
+  password: muxi
