--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ sudo: required
 dist: trusty
 
 go:
-  - 1.11.x
+  - 1.12.x
+
+env:
+  - GO111MODULE=on
 
 before_script:
   - mysql -u root --password="" < db.sql
