--- a/api.yaml
+++ b/api.yaml
@@ -9,7 +9,7 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "pass2.muxixyz.com"
+host: "pass.muxi-tech.xyz"
 basePath: "/auth/api"
 tags:
   - name: "auth"
